--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.BoardGameBuddy"
         tools:targetApi="31">
         <activity
+            android:name=".ui.YourGamesActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.GameDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".UI.StartActivity"
+            android:name=".ui.StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,13 +29,14 @@
         </activity>
         <activity
             android:name=".ui.MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".ui.RegisterActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".ui.LoginActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
+        <activity android:name=".data.PopulateDatabase" />
     </application>
 
 </manifest>
